dogbank/k8s/base/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dogbank
  labels:
    name: dogbank
    environment: production
